Upgrade to libGDX 1.14.2 and the LWJGL 3 backend
The resurrection left this on libGDX 1.2.0 and LWJGL 2.9.1. RESURRECTION.md
costed the move out and expected the CRT post-processing to be the expensive
part: a dead library that "does not compile against modern libGDX", so the
effect would need rebuilding on gdx-vfx and would not look the same afterwards.

It resolves against 1.14.2 on all but one member. FrameBuffer gained a generic
superclass and getColorBufferTexture moved into it, so the descriptor in 2015
bytecode no longer links, and five classes call it. At source level the call is
unchanged. Upstream is Apache 2.0, so the 29 classes the jar held are now
third-party/postprocessing, byte-identical, compiled with everything else. The
shaders were always in assets/, so the effect is the one that shipped.

The game needed nine files. Every call site came from resolving the old build's
bytecode against the new libGDX rather than from chasing compiler errors:
Animation is generic, BitmapFont lost setScale/drawWrapped/drawMultiLine and
HAlignment, InputProcessor.scrolled takes two floats and touchCancelled is new,
setCursorImage became Graphics.newCursor, and the launcher is LWJGL 3.

LWJGL is 3.4.3 rather than the pinned 3.3.3, which does not know the JNI version
a current JDK reports and warns about crashing on every launch. 3.4 also carries
the FFM memory backend. That matters more than it looks: LWJGL 2 survived
--sun-misc-unsafe-memory-access=deny by falling back to reflection, and LWJGL 3
dies in a static initializer, so this upgrade made that deprecation fatal until
MemoryBackend.select() asks for FFM on JDK 25. Overriding a pinned minor version
was checked, not assumed - all 643 LWJGL members the libGDX backend references
resolve against 3.4.3.

The fat jar needed Multi-Release: true. LWJGL keeps those classes under
META-INF/versions and the JVM ignores them otherwise, so the packaged jar
carried the FFM backend but silently fell back to Unsafe. Only running 